conformance/tests/inferencepool_accepted.yaml
# --- HTTPRoute Definition ---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-for-inferencepool-accepted
  namespace: gateway-conformance-app-backend
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: conformance-primary
    namespace: gateway-conformance-infra
    sectionName: http
  rules:
  - backendRefs:
    - group: inference.networking.k8s.io
      kind: InferencePool
      name: primary-inference-pool
      # namespace: gateway-conformance-app-backend - is omitted since it is in the same namespace as HTTPRoute
    matches:
    - path:
        type: PathPrefix
        value: /accepted-pool-test
